--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Vite + React</title>
+    <title>FITBYVG - Train. Track. Transform.</title>
   </head>
   <body>
     <div id="root"></div>
